--- a/Lab Part 2 - AutoML Python SDK/auto-ml-forecasting-energy-demand.ipynb
+++ b/Lab Part 2 - AutoML Python SDK/auto-ml-forecasting-energy-demand.ipynb
@@ -20,7 +20,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Automated Machine Learning\n",
+        "# LAB Part 2 : Building a machine learning model using Automated Machine Learning Python SDK\n",
         "_**Forecasting using the Energy Demand Dataset**_\n",
         "\n",
         "## Contents\n",
